SERVER-56190: Fix wrong nss in ExpressionContext for CatalogCache refresh aggregation